# WikiGit

./: README.md  app.py  github_service.py  models.py  pyproject.toml  replit.md  requirements.txt  routes.py  utils.py
instance/: wiki.db
static/css/: custom.css
static/js/: editor.js  file_browser.js
templates/: admin_dashboard.html  base.html  create_file.html  diff_view.html  editor.html  file_browser.html  file_tree_item.html  index.html  login.html  register.html  review_queue.html  settings.html  user_settings.html
